@@ -1,5 +1,6 @@
 soapyuhd (0.3.1) unstable; urgency=low
 
+  * support setHardwareTime("CMD"), deprecated setCommandTime()
   * support changes to property tree API (backwards compatible)
 
  -- Josh Blum <josh@pothosware.com>  Sat, 19 Mar 2016 11:12:24 -0700
